<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ppp_bot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mouaffak9@gmail.com">mouafak</maintainer>
  <license>MIT</license>

  <depend>ros_ign_gazebo</depend>
  <depend>ros_gz_bridge</depend>
  <depend>xterm</depend>
  <depend>slam_toolbox</depend>



  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
